# Graphics_engine

./: CMakeLists.txt  Figure2DFunctions.cpp  Figure2DFunctions.h  Figure3DGenerator.cpp  Figure3DGenerator.h  LineDrawing.cpp  LineDrawing.h  TransformFunctions.cpp  TransformFunctions.h  ZBuffer.cpp  ZBuffer.h  main.cpp
Bodies/: Body.cpp  Body.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Dodecahedron.cpp  Dodecahedron.h  Icosahedron.cpp  Icosahedron.h  Octahedron.cpp  Octahedron.h  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h  Torus.cpp  Torus.h
Parsers/: l_parser.cc  l_parser.h
